# rsdiff

./: Cargo.toml  README.md
examples/: config.rs  similar.rs
fixtures/: test.yml
src/: config.rs  lib.rs
