[package]
name = "rsdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls"] }
serde_yaml = "0.9.14"
similar = "2.2.1"
tokio = { version = "1.21.2", features = ["full"] }
